[metadata]
version = 0.0.1
description = There is a bit of an air of mystery around this project...
license = mit
description_file = README.md
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
		
name = cosmox
display_name = cosmox

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
    cosmograph
    dol
    i2


[options.extras_require]
testing = 
    pytest


		

